syntax = "proto3";

option go_package = "github.com/tamararankovic/microservices_demo/common/auth";

package auth;

import "google/api/annotations.proto";

service AuthService{
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/register"
      body:"data"
    };}
//  rpc Login(LoginRequest) returns (LoginResponse) {
//    option (google.api.http) = {
//      post: "/login"
//      body: "data"
//    };
//  }
}

// Register

message RegisterRequest {
  RegisterRequestData data=1;
}

message RegisterRequestData{
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
  string userID = 3;
}

// Login

message LoginRequest {
  LoginData data = 1;
}

message LoginData{
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
  string username=4;
  string role=5;
  string userID = 6;
}